// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress renders correctly 1`] = `
<div
  class="za-progress type-line"
>
  <div
    class="za-progress-track"
    style="height:8px;border-radius:8px"
  >
    <div
      class="za-progress-thumb theme-default"
      style="width:10%;border-radius:8px"
    />
  </div>
</div>
`;

exports[`Progress renders has children correctly 1`] = `
<div
  class="za-progress type-line"
>
  <div
    class="za-progress-track"
    style="height:8px;border-radius:8px"
  >
    <div
      class="za-progress-thumb theme-default"
      style="width:10%;border-radius:8px"
    />
  </div>
  <div
    class="za-progress-text"
  >
    foo
  </div>
</div>
`;

exports[`Progress renders shape is circle correctly 1`] = `
<div
  class="za-progress type-line"
>
  <div
    class="za-progress-track"
    style="height:8px;border-radius:0"
  >
    <div
      class="za-progress-thumb theme-default"
      style="width:10%;border-radius:0"
    />
  </div>
  <div
    class="za-progress-text"
  >
    foo
  </div>
</div>
`;
